--- a/src/components/employees-list/employees-list.css
+++ b/src/components/employees-list/employees-list.css
@@ -1,4 +1,6 @@
 .app-list {
+  max-height: 400px;
+  overflow-x: hidden;
   padding: 0;
   border-radius: 10px;
   box-shadow: 15px 15px 30px rgba(0, 0, 0, .15);
